--- a/.github/container_lambda.yaml
+++ b/.github/container_lambda.yaml
@@ -1,6 +1,9 @@
 name: Create Docker COntainer
 
-on: [push]
+on: 
+  push:
+    branches:
+      - axios-text-success
 
 jobs:
   mlops-container:
@@ -37,4 +40,4 @@ jobs:
           image: mlops-tools:latest
       
       - name: Update lambda with image
-        run: aws lambda update-function-code --function-name  axiosFunction --image-uri ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-1.amazonaws.com/mlops-tools:latest
+        run: aws lambda update-function-code --function-name  axiosFunction2 --image-uri ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-1.amazonaws.com/mlops-tools:latest
